tests/ui/native_storage_explicit.stderr
error: native multi-byte storage is not allowed; use an endian storage type
 --> tests/ui/native_storage_explicit.rs:7:9
  |
7 |         value: u16 as u16,
  |         ^^^^^
