tests/ui/native_storage_explicit.rs
use zorua::prelude::*;

bitstruct! {
    #[repr(C)]
    #[derive(Clone)]
    struct Bad {
        value: u16 as u16,
    }
}

fn main() {}
